<resources>
    <string name="app_name">Fast Ordering</string>

    <string name="login">Inicia sesión</string>
    <string name="registrar">Registro</string>
    <string name="registro">Por favor llene los datos para hacer el registro</string>
    <string name="principal">Información \n Fast Ordering es una aplicación diseñada para agilizar
        el proceso de toma y comunicación de un pedido en un establecimiento publico, especificamente en lugares de comidas preparadas. \n
        Se pueden agrerar dos tipos de roles, cocinero y mesero. El primero recibirá las ordenes que el segundo envía por medio
        de la aplicación.</string>
    <string name="perfil">Mi Perfil</string>
    <string name="usuario">Nombre</string>
    <string name="contraseña">Contraseña</string>
    <string name="confcontra">Confirme contraseña</string>
    <string name="correo">Correo</string>
    <string name="Bregistro">Registrar</string>
    <string name="blogin">Login</string>
    <string name="facebook_app_id">176781472972009</string>
    <string name="fb_login_protocol_scheme">fb176781472972009</string>
    <string name="roles">Elija un rol</string>
    <string name="mesero">Mesero</string>
    <string name="cocina">Cocina</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cantidad">Cantidad:</string>
    <string name="mesa">Mesa:</string>

</resources>
