<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.isabel.apppractica2.RegistroActivity"
    android:orientation="vertical"
    android:layout_margin="10sp"
    android:background="@drawable/marca"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/registro"
        android:id="@+id/tRegistro"
        />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/usuario"
        android:id="@+id/eNUsuario"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/correo"
        android:id="@+id/ecorreo"
        android:inputType="textEmailAddress"
        />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/contraseña"
        android:id="@+id/eNContraseña"
        android:inputType="textPassword"
        
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/confcontra"
        android:id="@+id/econfcontra"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:backgroundTint="@color/mygreen"
        android:textColor="@color/white"
        android:text="@string/Bregistro"
        android:textSize="20sp"
        android:id="@+id/bregistrar2"
        android:onClick="DatosRegistro"
        android:layout_margin="20sp"


        />

</LinearLayout>
