<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.isabel.apppractica2.PrincipalActivity"
    android:orientation="vertical"
    android:layout_margin="10sp"
    android:background="@drawable/marca"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10sp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roles"
            android:id="@+id/tPrincipal"
            android:textColor="@color/black"
            android:textSize="30sp"


            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10sp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="@color/mygreen"
            android:text="@string/mesero"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_gravity="top"
            android:id="@+id/bMesero"
            android:onClick="Mesero"

            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80sp"
            android:backgroundTint="@color/mygreen"
            android:text="@string/cocina"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_gravity="top"
            android:id="@+id/bCocina"
            android:onClick="Cocina"

            />


    </LinearLayout>

</LinearLayout>
